Fix issue with old Safari not supported flex gap.

--- a/users/sign-in.css
+++ b/users/sign-in.css
@@ -1,10 +1,14 @@
 /* Main */
 main > section.flex {
     align-items: stretch;
-    --gap: 1rem;
+    --gap: 0;
     margin: 0 auto 2rem auto;
     max-width: 60rem;
 }
+
+    main > section.flex > * + * {
+        margin-left: 1rem;
+    }
 
     main > section.flex > form#sign_in_form {
         flex: 2;
